--- a/talk_main_eng.ipynb
+++ b/talk_main_eng.ipynb
@@ -920,15 +920,15 @@
     "\n",
     "* [Wikipedia ICA](https://en.wikipedia.org/wiki/Independent_component_analysis), [deutsch](https://de.wikipedia.org/wiki/Unabhängigkeitsanalyse)\n",
     "* [ICA Introduction](http://andreas.welcomes-you.com/research/phd/index.html)\n",
-    "* [Algorithmus FastICA](http://www.cs.helsinki.fi/u/ahyvarin/papers/)\n",
+    "* [Algorithm FastICA](http://www.cs.helsinki.fi/u/ahyvarin/papers/)\n",
     "\n",
     "\n",
-    "* [Python sklearn.decomposition.FastICA Beispiel](http://scikit-learn.org/stable/auto_examples/decomposition/plot_ica_blind_source_separation.html)\n",
-    "* [R FastICA Dokumentation](https://cran.r-project.org/web/packages/fastICA/fastICA.pdf)\n",
+    "* [Python sklearn.decomposition.FastICA Example](http://scikit-learn.org/stable/auto_examples/decomposition/plot_ica_blind_source_separation.html)\n",
+    "* [R FastICA Documentation](https://cran.r-project.org/web/packages/fastICA/fastICA.pdf)\n",
     "\n",
     "\n",
-    "* [EEGLAB Webseite](http://sccn.ucsd.edu/eeglab/)\n",
-    "* [EEGLAB Dokumentation](http://sccn.ucsd.edu/wiki/EEGLAB)\n",
+    "* [EEGLAB Website](http://sccn.ucsd.edu/eeglab/)\n",
+    "* [EEGLAB Documentation](http://sccn.ucsd.edu/wiki/EEGLAB)\n",
     "\n",
     "\n",
     "* [OpenClipart](http://openclipart.org)\n",
@@ -937,7 +937,7 @@
     "Related topics\n",
     "\n",
     "\n",
-    "* [Wikipedia zentraler Grenzwertsatz](https://en.wikipedia.org/wiki/Central_limit_theorem), [deutsch](https://de.wikipedia.org/wiki/Zentraler_Grenzwertsatz)\n",
+    "* [Wikipedia central limit theorem](https://en.wikipedia.org/wiki/Central_limit_theorem), [deutsch](https://de.wikipedia.org/wiki/Zentraler_Grenzwertsatz)\n",
     "\n",
     "\n",
     "* [Python.sklearn.decomposition](http://scikit-learn.org/stable/modules/decomposition.html#decompositions)\n",
